Deepen Java guide: JMM/happens-before, GC internals, records/sealed/pattern-matching, generics/PECS, streams, exceptions